--- a/tcn/ui/templates/docs/base.html
+++ b/tcn/ui/templates/docs/base.html
@@ -1,6 +1,22 @@
 {% extends 'docs/base.html' %}{% load i18n static wagtailcore_tags %}
 
 <!---->
+{% block title %}
+<title>
+  {% trans 'The Certain News' %} | {% include 'docs/components/title.html' %}
+</title>
+{% endblock %}
+
+<!---->
+{% block styles %}{{ block.super }}
+<link
+  href="{% static 'ui/css/styles.css' %}"
+  rel="stylesheet"
+  type="text/css"
+/>
+{% endblock %}
+
+<!---->
 {% block branding %}
 <li
   class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
@@ -97,6 +113,9 @@
   </a>
 </li>
 {% endblock %}
+
+<!---->
+{% block footer %}{% include 'ui/components/footer.html' %}{% endblock %}
 
 <!---->
 {% block drawer_branding %}
