--- a/tcn/ui/templates/ui/components/article.html
+++ b/tcn/ui/templates/ui/components/article.html
@@ -19,7 +19,7 @@
     </figure>
 
     <div
-      class="card-body p-4 justify-end bg-gradient-to-t from-primary dark:from-base-100 to-transparent to-75%"
+      class="card-body p-4 justify-end bg-gradient-to-t from-neutral-900 to-transparent"
     >
       <div class="card-actions items-center gap-1">
         {% if article.is_breaking %}
