--- a/tcn/ui/templates/ui/contact.html
+++ b/tcn/ui/templates/ui/contact.html
@@ -5,14 +5,18 @@
 
 <!---->
 {% block content %}
-<section class="container mx-auto px-4 py-20">
+<section class="container mx-auto grid gap-8 px-4 py-20">
+  {% block message %}{% endblock %}
+
   <div
-    class="mx-auto prose prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full"
+    class="prose mx-auto prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-img:rounded-box prose-img:w-full"
   >
     <h1>{{ contact.title }}</h1>
     {{ contact.content }}
   </div>
 
-  {% include 'ui/components/form.html' %}
+  {% block form %}
+  <div>{% include 'ui/components/form.html' %}</div>
+  {% endblock %}
 </section>
 {% endblock %}
