--- a/tcn/ui/templates/ui/articles/id.html
+++ b/tcn/ui/templates/ui/articles/id.html
@@ -313,7 +313,7 @@
   </div>
 
   <div
-    class="prose mx-auto prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full prose-pre:bg-base-200 prose-pre:border prose-pre:border-base-300"
+    class="prose mx-auto prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-img:rounded-box prose-img:w-full"
   >
     <figure class="skeleton overflow-clip">
       {% image article.image fill-1920x1080 %}
