--- a/tcn/ui/templates/ui/categories/index.html
+++ b/tcn/ui/templates/ui/categories/index.html
@@ -10,30 +10,20 @@
     {% include 'ui/components/breadcrumbs.html' %}
 
     <div
-      class="hero bg-gradient-to-r from-emerald-500 to-sky-400 rounded-box md:aspect-video"
+      class="prose mx-auto prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-img:rounded-box prose-img:w-full"
     >
-      <div class="hero-content grid gap-8">
-        <h1 class="text-3xl text-primary font-black lg:text-7xl">
-          {{ index.title }}
-        </h1>
-      </div>
+      <h1>{{ index.title }}</h1>
+
+      {{ index.description|richtext }}
     </div>
 
-    <section class="grid gap-8">
-      <div
-        class="prose mx-auto prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full prose-pre:bg-base-200 prose-pre:border prose-pre:border-base-300"
-      >
-        {{ index.description|richtext }}
-      </div>
-
-      <ol class="grid grid-cols-12 gap-4">
-        {% for category in index.get_children.specific %}
-        <li class="col-span-12 md:col-span-6 lg:col-span-4 2xl:col-span-3">
-          {% include 'ui/components/category.html' %}
-        </li>
-        {% endfor %}
-      </ol>
-    </section>
+    <ol class="grid grid-cols-12 gap-4">
+      {% for category in index.get_children.specific %}
+      <li class="col-span-12 md:col-span-6 lg:col-span-4 2xl:col-span-3">
+        {% include 'ui/components/category.html' %}
+      </li>
+      {% endfor %}
+    </ol>
   </section>
 </div>
 {% endblock %}
