--- a/tcn/ui/templates/ui/articles/list.html
+++ b/tcn/ui/templates/ui/articles/list.html
@@ -97,12 +97,12 @@
       <h1 class="text-lg font-semibold lg:text-2xl">{% trans 'Filters' %}</h1>
 
       <div
-        class="tooltip tooltip-left rtl:tooltip-right tooltip-error"
+        class="tooltip tooltip-left rtl:tooltip-right"
         data-tip="{% trans 'Close' %}"
       >
         <button
           onclick="filters.close()"
-          class="btn btn-square btn-soft btn-primary hover:btn-error"
+          class="btn btn-square btn-sm btn-ghost md:btn-md 2xl:btn-lg"
         >
           <i data-lucide="x" class="size-4 lg:size-6"></i>
 
