--- a/tcn/ui/templates/ui/categories/index.html
+++ b/tcn/ui/templates/ui/categories/index.html
@@ -4,6 +4,17 @@
 {% block title %}{{ block.super }} | {{ index.title }}{% endblock %}
 
 <!---->
+{% block languages %}
+<!---->
+{% if page.get_translations.live %}
+<!---->
+{% include 'ui/components/lang_switch.html' %}
+<!---->
+{% else %}{{ block.super }}{% endif %}
+<!---->
+{% endblock %}
+
+<!---->
 {% block content %}
 <div class="container mx-auto px-4 py-20">
   <section class="grid gap-8">
