--- a/tcn/ui/templates/ui/contact.html
+++ b/tcn/ui/templates/ui/contact.html
@@ -4,6 +4,17 @@
 {% block title %}{{ block.super }} | {{ contact.title }}{% endblock %}
 
 <!---->
+{% block languages %}
+<!---->
+{% if page.get_translations.live %}
+<!---->
+{% include 'ui/components/lang_switch.html' %}
+<!---->
+{% else %}{{ block.super }}{% endif %}
+<!---->
+{% endblock %}
+
+<!---->
 {% block content %}
 <section class="container mx-auto grid gap-8 px-4 py-20">
   {% block message %}{% endblock %}
